test/fails/bad_generics/declare7.lgl
tag pos is vec3;
tag color is vec3;
tag tinted is color;

declare float dot<`t : vec>(`t x, `t y);

// This could be even more powerful, but we're not there yet
declare `t normalize<`t : vec>(`t x);

float normed_dot<`u : genType>(`u x, `u y) { 
    `u normx = normalize<`u>(x); // Since it is false that genType <= vec
    `u normy = normalize<`u>(y);
    return dot<`u>(normx, normy);
}

void main() {
    print 1;
}